--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,9 +4,8 @@ export("%>%")
 export(ezcor2var)
 export(ezcor_parallel)
 import(dplyr)
-import(furrr)
 import(psych)
 import(purrr)
 importFrom(magrittr,"%<>%")
 importFrom(magrittr,"%>%")
-importFrom(magrittr,set_names)
+importFrom(purrr,set_names)
