--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -18,7 +18,7 @@ Encoding: UTF-8
 LazyData: true
 RoxygenNote: 7.1.0
 Depends: 
-    R (>= 3.5)
+    R (>= 3.6)
 Imports: 
     dplyr (>= 0.8.3),
     magrittr (>= 1.5),
@@ -26,4 +26,5 @@ Imports:
     psych
 Suggests:
     ppcor,
-    furrr
+    furrr,
+    WGCNA
